makes it work on intelliJ