@@ -1,8 +1,4 @@
-package src.main.java;
-
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
 
 class RecommendationManager {
@@ -22,7 +18,7 @@ class RecommendationManager {
                 .stream()
                 .filter((Media m) -> preferred.contains(m.getGenre()))
                 .sorted(Comparator.comparingInt(Media::getRecentViewCount))
-                .collect(Collectors.toList()));
+                .toList());
 
         return results;
     }
